--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
     <string name="tag_device_name" translatable="false">{{DEVICE_NAME}}</string>
     <string name="tag_app_version" translatable="false">{{APP_VERSION}}</string>
     <string name="tag_title" translatable="false">{{TITLE}}</string>
+    <string name="tag_iccid" translatable="false">{{ICCID}}</string>
     <string name="tag_call_type" translatable="false">{{CALL_TYPE}}</string>
     <string name="tag_location" translatable="false">{{LOCATION}}</string>
     <string name="tag_location_longitude" translatable="false">{{LOCATION_LONGITUDE}}</string>
